Implemented variable replacement and added test